--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ header, footer, .center {
 
 th, td {
   padding: 2px 15px;
+  border-radius: 25px;
   max-width: 200px;
   overflow: auto;
   white-space: nowrap; }
@@ -65,6 +66,7 @@ input[type="submit"].button-danger,
 input[type="reset"].button-danger,
 input[type="button"].button-danger {
   color: #FFF;
+  border-radius: 25px;
   background-color: #D9534F;
   border-color: #D9534F; }
 
@@ -79,6 +81,7 @@ input[type="submit"].button-danger:focus,
 input[type="reset"].button-danger:focus,
 input[type="button"].button-danger:focus {
   color: #FFF;
+  border-radius: 25px;
   background-color: #C43E3A;
   border-color: #C43E3A; }
 
